fix missing line but proportion is still not working